# poenews-discordbot

./: .gitignore  Cargo.toml  README.md
src/: cms.rs  main.rs  poenews.rs  rsstestdata.rs
